welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:50: error: not found: value Faire3Motifs
  Faire3Motifs();
  ^